fix responsive design on mobile and add responsive design on large mobile

--- a/src/components/Logo/style.scss
+++ b/src/components/Logo/style.scss
@@ -4,7 +4,7 @@
   margin-bottom: 50px;
 };
 
-@media screen and (max-width: v.$mobile) {
+@media screen and (max-width: v.$mobile-large) {
   .header {
     margin-top: 40px;
   }
