--- a/src/components/Splitter/Bill/style.scss
+++ b/src/components/Splitter/Bill/style.scss
@@ -42,11 +42,3 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   display: none;
 }
-
-@media screen and (max-width: v.$mobile) {
-  .bill {
-    &__input {
-      width: 85%;
-    }
-  }
-}
