--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,5 +1,6 @@
 // devices 
 $mobile : 375px;
+$mobile-large: 767px;
 $desktop: 1440px;
 
 // Colors
